# factory

./: .gitignore  AGENTS.md  HOW-TO-WORK-LOCALLY.md  PRODUCTION.md  README.md
.github/workflows/: factory-evals.yml
apps/mini_invoice_rag/: pyproject.toml
apps/mini_invoice_rag/src/mini_rag/: __init__.py  app.py  config.py  data_loader.py  ollama_client.py  policies.py  retriever.py
apps/mini_invoice_rag/tests/: test_policies.py  test_retriever.py
evals/: README.md  eval_config.yaml  run_evals.py
golden_sets/invoice-unpaid-chatbot/: README.md  questions.json  refusal_cases.json  rls_cases.json
golden_sets/invoice-unpaid-chatbot/fake_data/: invoice_lines.csv
governance/: README.md
governance/access_contracts/: llm_read_access.yaml
governance/audit/: audit_events.schema.yaml
governance/data_contracts/: invoice_lines.schema.yaml
governance/lineage/: invoice_lineage.md
governance/meaning_docs/: invoice_domain.md
governance/security/: rls_policies.yaml
governance/semantic_layer/: invoice_lines.semantic.yaml
scripts/: check_ollama.ps1  run_offline_evals.ps1
usecases/invoice-unpaid-chatbot/: release_criteria.yaml  usecase.spec.md  usecase.spec.yaml
usecases/invoice-unpaid-chatbot/pilot_runs/: 000-template.md
